--- a/copy/portal/Agent/components/_madia.scss
+++ b/copy/portal/Agent/components/_madia.scss
@@ -128,7 +128,7 @@
             font-size: 12px;
         }
 
-        .details .left .xstyle-dynamiclabelcontrol-wrapper > .col-4 label,.details .left span{
+        .details .left .xstyle-dynamiclabelcontrol-wrapper > .x-control-caption-wrapper label,.details .left span{
 
             font-size: 13px;
             line-height: 30px !important;
@@ -149,7 +149,7 @@
 
         height: 40px !important;
         font-size: 14px;
-        margin-bottom: 5px;
+      
     }
 
     .k-window:has(.k-edit-form-container) button,.k-window:has(.k-edit-form-container) button.k-button-solid.k-button-solid-primary, .gridHeaderButton button, .xstyle-buttoncontrol-wrapper button{
@@ -163,7 +163,7 @@
     }
 
 
-    .greyPanel .first-panel .gridHeaderButton > div .xstyle-kicon-wrapper, .greyPanel .gridHeaderButton > div .xstyle-kicon-wrapper{
+    .greyPanel .first-panel .gridHeaderButton > div.xstyle-kicon-wrapper, .greyPanel .gridHeaderButton > div.xstyle-kicon-wrapper{
         width: 40px;
         height: 40px;
 
@@ -212,7 +212,8 @@
     .xstyle-date-wrapper .s-datePickerResponsive.x-datePicker-mobile, 
     .xstyle-date-wrapper span.k-datepicker, 
     .xstyle-textcontrol-wrapper.k-state-disabled input.k-textbox, 
-    .xstyle-textcontrol-wrapper input{
+    .xstyle-textcontrol-wrapper input,
+    .xstyle-multiselect-wrapper .k-multiselect {
         height: 40px !important;
         font-size: 13px !important;
     }
