--- a/copy/portal/PortalCustomer/components/_cubeDashboard.scss
+++ b/copy/portal/PortalCustomer/components/_cubeDashboard.scss
@@ -30,7 +30,7 @@
             padding: 0;
         }
 
-        .x-self-container {
+        .x-control-wrapper {
             top: 50%;
             transform: translateY(-50%);
             position: relative;
