--- a/copy/portal/PortalCustomer/variable/_variable.scss
+++ b/copy/portal/PortalCustomer/variable/_variable.scss
@@ -152,8 +152,8 @@ $slider-tooltip-color: #39b54a !default;
 $slider-bg: #39b54a !default;
 $special-button-bg-focus: #ffffff !default;
 $special-button-bg: #ffffff !default;
-$speical-button-press: #30973e !default;
-$speical-button-color-border-focus: #30973e !default;
+$special-button-press: #30973e !default;
+$special-button-color-border-focus: #30973e !default;
 $special-button-color-border: #39b54a !default;
 $special-button-color-icon: #39b54a !default;
 $special-button-color-text-hover: #ffffff !default;
@@ -178,7 +178,7 @@ $drawer-icon-color-before: #ffffff !default;
 $drawer-icon-color-after: #6adbff !default; 
 $order-link-color: #30c6f5 !default;
 $radio-button-focus-border: #6adbff !default;
-$speical-button-color-border-hover: #64cb72 !default;
+$special-button-color-border-hover: #64cb72 !default;
 $upload-border-border-top: #267931 !default;
 
 $time-picker-number-default: #c7c7c7 !default; 
