--- a/copy/portal/PortalSuppliers/components/_header.scss
+++ b/copy/portal/PortalSuppliers/components/_header.scss
@@ -116,7 +116,7 @@ header.navbar-fixed-top.header-suppliers {
 
 // logo //
 
-.logo .x-self-container.s-self-container{
+.logo .x-control-wrapper{
   position: absolute;
   width: 275px;
   left: 10px;
