--- a/copy/portal/PortalSuppliers/components/_madia.scss
+++ b/copy/portal/PortalSuppliers/components/_madia.scss
@@ -128,7 +128,7 @@
             font-size: 12px;
         }
 
-        .details .left .xstyle-dynamiclabelcontrol-wrapper > .col-4 label,.details .left span{
+        .details .left .xstyle-dynamiclabelcontrol-wrapper > .x-control-caption-wrapper label,.details .left span{
 
             font-size: 13px;
             line-height: 30px !important;
@@ -162,7 +162,7 @@
     }
 
 
-    .greyPanel .first-panel .gridHeaderButton > div .xstyle-kicon-wrapper, .greyPanel .gridHeaderButton > div .xstyle-kicon-wrapper{
+    .greyPanel .first-panel .gridHeaderButton > div.xstyle-kicon-wrapper, .greyPanel .gridHeaderButton > div .xstyle-kicon-wrapper{
         width: 40px;
         height: 40px;
 
