--- a/copy/portal/PortalSuppliers/components/_payment-cube.scss
+++ b/copy/portal/PortalSuppliers/components/_payment-cube.scss
@@ -50,7 +50,7 @@
             }
 
 
-            .xstyle-buttoncontrol-wrapper{
+            &.xstyle-buttoncontrol-wrapper{
                  .x-button-wrapper {
                     float: left;
                  }
