--- a/site/Aloni/pages/_ItemConfiguration.scss
+++ b/site/Aloni/pages/_ItemConfiguration.scss
@@ -9,9 +9,12 @@
     }
 
   .dataAndScrollview{
+    .x-image-wrapper{
+        padding-top: 15px;
+    }
     img{
         width: 100%;
-        border-radius: 8px;
+        border-radius: 2px;
     }
   }
     .col-detailView{
