--- a/site/Aloni/variable/_variable.scss
+++ b/site/Aloni/variable/_variable.scss
@@ -67,7 +67,7 @@ $user-title-color:#000000;
 $tab-script-border-bottom:#927338;
 $tab-script-color-text:#927338;
 $link-color: #625337;
-$scrollview-selected-image-box-shadow:drop-shadow(0px 0px 6px #AE8B49);
+$scrollview-selected-image-box-shadow: 0px 0px 3px 0px rgba(174, 139, 73, 0.50);
 $row-title-color: #AE8B49;
 $icon-color:#625337;
 $progressbar-bg:#FAF6F0;
