--- a/site/Chil/Transportation/components/_buttoncontrol.scss
+++ b/site/Chil/Transportation/components/_buttoncontrol.scss
@@ -110,7 +110,7 @@
     .x-button-wrapper{
       text-align: center;
     }
-    .x-control-content-wrapper.s-control-content-wrapper{
+    &.x-control-wrapper.s-control-wrapper{
     button.x-button {
       height: 80px !important;
       background: #FCFCFC !important;
