--- a/site/OPL/PortalCustomer/variable/_variable.scss
+++ b/site/OPL/PortalCustomer/variable/_variable.scss
@@ -168,7 +168,7 @@ $special-button-color-border-focus: #0272ac;
 $special-button-color-border-hover: #169ee4; 
 $special-button-color-icon: #0082c5; 
 $special-button-bg-hover: #169ee4; 
-$speical-button-press: #0272ac; 
+$special-button-press: #0272ac; 
 $window-icon-close-color: #a6a6a6; 
 $window-title-border: #0082c5; 
 $window-title-color: #0082c5; 
@@ -184,6 +184,11 @@ $upload-color-text: #0082c5;
 $upload-border-border-top: #086596; 
 $icon-after: #0082c5; 
 $icon-before: #4bbef9; 
+$time-picker-title: #676767; 
+$time-picker-link-now: #0082c5; 
+$time-picker-border-hour-select: #dedede; 
+$time-picker-border: #e7e7e7; 
+$time-picker-number-default: #c7c7c7; 
 
 $header-box-shadow: 0px 0px 10px 0px rgba(103, 103, 103, 0.10);
 $popup-k-filter-menu-box-shadow: 0px 5px 8px 0px rgba(0, 130, 197, 0.10);
@@ -193,7 +198,7 @@ $check-box-focus-box-shadow: 0px 1px 2px 0px rgba(238, 62, 70, 0.30), 0px 2px 6p
 $button-box-shadow-focus: 0px 1px 3px 0px rgba(0, 130, 197, 0.30), 0px 4px 8px 0px rgba(0, 130, 197, 0.10);
 $Cube-dashboard-box-shadow: 0px 0px 10px 0px rgba(103, 103, 103, 0.10);
 $window-box-shdow: 0px 5px 8px 0px rgba(0, 130, 197, 0.10);
-$messagebox-box-shaow: 0px 5px 8px 0px rgba(0, 130, 197, 0.10);
+$messagebox-box-shadow: 0px 5px 8px 0px rgba(0, 130, 197, 0.10);
 $radio-button-box-shadow-focus: 0px 1px 2px 0px rgba(238, 62, 70, 0.30), 0px 2px 6px 0px rgba(238, 62, 70, 0.10);
 $slider-box-shadow: 0px 5px 8px 0px rgba(0, 130, 197, 0.10);
 $control-box-shadow-focus: 0px 1px 3px 0px rgba(0, 130, 197, 0.30), 0px 4px 8px 0px rgba(0, 130, 197, 0.10);
