--- a/site/Pery/Tass/ErrorMessage/_ErrorMessage.scss
+++ b/site/Pery/Tass/ErrorMessage/_ErrorMessage.scss
@@ -1,4 +1,4 @@
-$Title-background: #10143A;
+$title-background: #10143A;
 $card-body-background: white;
 $card-body-box-shadow: 2px 2px 10px rgb(22 169 199 / 20%);
 $color-text-title: #10143A;
@@ -8,243 +8,3 @@ $note-background: #45B4E3;
 $note-color-text: white;
 
 
-body{
-    margin: 0;
-  }
-  .bg-blue{
-    background-color:$Title-background;
-    padding: 7%;
-    
-    }
-    
-    .card-body{
-        align-items: center;
-        padding: 30px;
-        gap: 10px;
-        width: 27%;
-        /* height: 106px; */
-        height: auto;
-        background: $card-body-background;
-        box-shadow: $card-body-box-shadow;
-        border-radius: 10px;
-        position: relative;
-        margin: 0 auto;
-        left: 0;
-        right: 0;
-        top: 22%;
-        margin-top: -70px !important;
-    }
-    
-    .text-title{
-        font-family: 'Heebo';
-        font-style: normal;
-        font-weight: 700;
-        font-size: 33px;
-        line-height: 130%;
-        margin: 0;
-        text-align: center;
-        width: 92%;
-        margin: auto;
-        color: $color-text-title !important;
-  
-      
-    }
-    .text-title a{
-      color: $color-text-title-link !important;
-      border-bottom: none;
-      text-decoration: auto !important;
-    }
-    
-    .error{
-        margin: auto;
-        width: 17%;
-    
-    }
-    
-    .icon-bell-light{
-      display:block;
-      font-size: 111px;
-      /* width: auto; */
-      text-align: center;
-      margin:50px auto 0;
-      color: $color-icon-bell;
-      -webkit-animation: ring 10s .7s ease-in-out infinite;
-      -webkit-transform-origin: 50% 4px;
-      -moz-animation: ring 10s .7s ease-in-out infinite;
-      -moz-transform-origin: 50% 4px;
-      animation: ring 10s .7s ease-in-out infinite;
-      transform-origin: 50% 4px;
-    }
-    
-    @-webkit-keyframes ring {
-      0% { -webkit-transform: rotateZ(0); }
-      1% { -webkit-transform: rotateZ(30deg); }
-      3% { -webkit-transform: rotateZ(-28deg); }
-      5% { -webkit-transform: rotateZ(34deg); }
-      7% { -webkit-transform: rotateZ(-32deg); }
-      9% { -webkit-transform: rotateZ(30deg); }
-      11% { -webkit-transform: rotateZ(-28deg); }
-      13% { -webkit-transform: rotateZ(26deg); }
-      15% { -webkit-transform: rotateZ(-24deg); }
-      17% { -webkit-transform: rotateZ(22deg); }
-      19% { -webkit-transform: rotateZ(-20deg); }
-      21% { -webkit-transform: rotateZ(18deg); }
-      23% { -webkit-transform: rotateZ(-16deg); }
-      25% { -webkit-transform: rotateZ(14deg); }
-      27% { -webkit-transform: rotateZ(-12deg); }
-      29% { -webkit-transform: rotateZ(10deg); }
-      31% { -webkit-transform: rotateZ(-8deg); }
-      33% { -webkit-transform: rotateZ(6deg); }
-      35% { -webkit-transform: rotateZ(-4deg); }
-      37% { -webkit-transform: rotateZ(2deg); }
-      39% { -webkit-transform: rotateZ(-1deg); }
-      41% { -webkit-transform: rotateZ(1deg); }
-    
-      43% { -webkit-transform: rotateZ(0); }
-      100% { -webkit-transform: rotateZ(0); }
-    }
-    
-    @-moz-keyframes ring {
-      0% { -moz-transform: rotate(0); }
-      1% { -moz-transform: rotate(30deg); }
-      3% { -moz-transform: rotate(-28deg); }
-      5% { -moz-transform: rotate(34deg); }
-      7% { -moz-transform: rotate(-32deg); }
-      9% { -moz-transform: rotate(30deg); }
-      11% { -moz-transform: rotate(-28deg); }
-      13% { -moz-transform: rotate(26deg); }
-      15% { -moz-transform: rotate(-24deg); }
-      17% { -moz-transform: rotate(22deg); }
-      19% { -moz-transform: rotate(-20deg); }
-      21% { -moz-transform: rotate(18deg); }
-      23% { -moz-transform: rotate(-16deg); }
-      25% { -moz-transform: rotate(14deg); }
-      27% { -moz-transform: rotate(-12deg); }
-      29% { -moz-transform: rotate(10deg); }
-      31% { -moz-transform: rotate(-8deg); }
-      33% { -moz-transform: rotate(6deg); }
-      35% { -moz-transform: rotate(-4deg); }
-      37% { -moz-transform: rotate(2deg); }
-      39% { -moz-transform: rotate(-1deg); }
-      41% { -moz-transform: rotate(1deg); }
-    
-      43% { -moz-transform: rotate(0); }
-      100% { -moz-transform: rotate(0); }
-    }
-    
-    @keyframes ring {
-      0% { transform: rotate(0); }
-      1% { transform: rotate(30deg); }
-      3% { transform: rotate(-28deg); }
-      5% { transform: rotate(34deg); }
-      7% { transform: rotate(-32deg); }
-      9% { transform: rotate(30deg); }
-      11% { transform: rotate(-28deg); }
-      13% { transform: rotate(26deg); }
-      15% { transform: rotate(-24deg); }
-      17% { transform: rotate(22deg); }
-      19% { transform: rotate(-20deg); }
-      21% { transform: rotate(18deg); }
-      23% { transform: rotate(-16deg); }
-      25% { transform: rotate(14deg); }
-      27% { transform: rotate(-12deg); }
-      29% { transform: rotate(10deg); }
-      31% { transform: rotate(-8deg); }
-      33% { transform: rotate(6deg); }
-      35% { transform: rotate(-4deg); }
-      37% { transform: rotate(2deg); }
-      39% { transform: rotate(-1deg); }
-      41% { transform: rotate(1deg); }
-    
-      43% { transform: rotate(0); }
-      100% { transform: rotate(0); }
-    }
-    
-    .message-error .text-title{
-       
-            font-weight: 400 !important;
-    }
-    .message-error{
-        margin: auto;
-        text-align: center;
-        margin-top: 30px;
-    }
-    
-    .text{
-        font-family: 'Heebo';
-        font-style: normal;
-        font-weight: 400;
-        font-size: 15px;
-        line-height: 29px;
-        text-align: center;
-        color: #000000;
-        margin: 5px;
-    }
-    
-    .note{
-        display: flex;
-        flex-direction: row;
-        align-items: flex-start;
-        padding: 10px 37px;
-        gap: 10px;
-        position: absolute;
-        right: -16px;
-        top: -31px;
-        background: $note-background;
-        box-shadow: 3px 3px 4px rgb(22 169 199 / 25%);
-        border-radius: 10px;
-        transform: rotate(3deg);
-        font-family: 'Heebo';
-        font-style: normal;
-        font-weight: 700;
-        font-size: 32px;
-        text-align: center;
-        color: $note-color-text;
-    }
-    
-    @media only screen and (max-width: 1465px) {
-        .card-body {
-          width: 40% !important;
-        }
-      }
-    
-      @media only screen and (max-width: 1050px) {
-        .card-body {
-          width: 54% !important;
-        }
-      }
-    
-      @media only screen and (max-width:850px) {
-        .bg-blue{
-            padding: 15% !important;
-    
-        }
-    
-        .text-title{
-            font-size: 20px !important;
-        }
-        p.text{
-          font-size: 16px !important;
-        }
-    
-        .card-body {
-          width: 60% !important;
-        }
-      }
-    
-      @media only screen and (max-width:640px) {
-        .bg-blue{
-            padding: 20% !important;
-    
-        }
-    
-    
-        .card-body {
-          width: 60% !important;
-          margin-top: -52px !important;
-        }
-      }
-  
-      .note{
-        font-size: 24 !important;
-      }
