--- a/studio/style.scss
+++ b/studio/style.scss
@@ -1,6 +1,4 @@
 @import './variable/variable';
-
-
 @import './components/button';
 @import './components/collapse';
 @import './components/header';
@@ -21,6 +19,10 @@
         gap: 20px;
         align-items: center;
         justify-content: right;
+    }
+
+    .header-studio {
+        padding-inline: 30px;
     }
 
 
@@ -97,15 +99,11 @@
         flex-direction: column;
         height: 100%;
         overflow: auto;
+        position: relative;
     }
 
     .container.pageContainer.xtafnit_pageContainer {
         margin: 0;
-    }
-
-
-    .col {
-        padding: 0;
     }
 
     .border {
@@ -125,15 +123,39 @@
         flex-direction: row;
     }
 
+    div[xid=controlxstudioMainpanel]>div {
+        height: 100%;
+        overflow: scroll;
+    }
+
     .ux-studio-border {
 
-        .row {
-            margin-block: 15px;
+        header,
+        footer {
+            position: relative;
+        }
+
+        .x-row {
+            border-radius: 0;
         }
 
         .row,
-        .col {
-            padding-inline: 15px;
+        header,
+        footer,
+        mainbody {
+            margin-block: 15px;
+            padding: 15px;
+        }
+
+        mainbody {
+            position: relative;
+        }
+
+        .row,
+        .col,
+        header,
+        footer,
+        mainbody {
             padding-block: 20px;
             border: 1px dotted $component-component-border-dash !important;
             border-collapse: collapse;
@@ -153,6 +175,9 @@
             }
         }
 
+        header::before,
+        footer::before,
+        mainbody::before,
         .row::before,
         .col::before,
         .x-control-wrapper::before {
@@ -171,15 +196,17 @@
         }
     }
 
-    .ux-studio-disabled-container .x-section-header-wrapper {
+    .ux-studio-disabled-container {
+        & .row:not([uxid="xstudioOtherTabPage"]):not([uxid="xstudioAdvancedTabPage"]) .x-section-header-wrapper {
 
-        .row,
-        .col {
-            background-color: $properties-list-proprties-list-bg-disable !important;
-            pointer-events: none !important;
+            .row,
+            .col {
+                background-color: $properties-list-proprties-list-bg-disable !important;
+                pointer-events: none !important;
 
-            &>* {
-                color: $properties-list-proprties-list-text-disable !important;
+                &>* {
+                    color: $properties-list-proprties-list-text-disable !important;
+                }
             }
         }
     }
@@ -242,7 +269,6 @@
 
         & mainbody {
             height: 100%;
-            overflow: auto;
             background-color: white;
             padding: 20px;
             max-height: 84vh;
@@ -271,6 +297,14 @@
         &>div>div>div>div>div {
             height: 100% !important;
             max-height: 84vh;
+        }
+
+        header,
+        footer {
+            margin-block: 15px !important;
+            padding: 15px;
+            min-height: 20px;
+            width: 100%;
         }
     }
 
@@ -302,6 +336,11 @@
             background: #29b0d975 !important;
         }
     }
+
+
+    // |--------------------------------------------------------------------------------------------------
+    // |  THIS STYLE ONLY APPLIES TO UX STUDIO SPECIFIC ELEMENTS
+    // |--------------------------------------------------------------------------------------------------
 
     .ux-studio-specific-styling {
         .xstyle-textwithbuttonsimple-wrapper {
@@ -399,89 +438,4 @@
             }
         }
     }
-
-
-    /// --------------- DISABLING HARMFUL STYLES --------------- ///
-
-    .x-row {
-        border-radius: 0;
-    }
-
-    .col,
-    .col-1,
-    .col-10,
-    .col-11,
-    .col-12,
-    .col-2,
-    .col-3,
-    .col-4,
-    .col-5,
-    .col-6,
-    .col-7,
-    .col-8,
-    .col-9,
-    .col-auto,
-    .col-lg,
-    .col-lg-1,
-    .col-lg-10,
-    .col-lg-11,
-    .col-lg-12,
-    .col-lg-2,
-    .col-lg-3,
-    .col-lg-4,
-    .col-lg-5,
-    .col-lg-6,
-    .col-lg-7,
-    .col-lg-8,
-    .col-lg-9,
-    .col-lg-auto,
-    .col-md,
-    .col-md-1,
-    .col-md-10,
-    .col-md-11,
-    .col-md-12,
-    .col-md-2,
-    .col-md-3,
-    .col-md-4,
-    .col-md-5,
-    .col-md-6,
-    .col-md-7,
-    .col-md-8,
-    .col-md-9,
-    .col-md-auto,
-    .col-sm,
-    .col-sm-1,
-    .col-sm-10,
-    .col-sm-11,
-    .col-sm-12,
-    .col-sm-2,
-    .col-sm-3,
-    .col-sm-4,
-    .col-sm-5,
-    .col-sm-6,
-    .col-sm-7,
-    .col-sm-8,
-    .col-sm-9,
-    .col-sm-auto,
-    .col-xl,
-    .col-xl-1,
-    .col-xl-10,
-    .col-xl-11,
-    .col-xl-12,
-    .col-xl-2,
-    .col-xl-3,
-    .col-xl-4,
-    .col-xl-5,
-    .col-xl-6,
-    .col-xl-7,
-    .col-xl-8,
-    .col-xl-9,
-    .col-xl-auto {
-        padding: 0;
-    }
-
-
-
-
-
 }
