--- a/base-newStyle copy/pages/_Survey.scss
+++ b/base-newStyle copy/pages/_Survey.scss
@@ -41,7 +41,10 @@
 
 #TafnitCore_SaaSServer_Survey_UI_Survey{
 
- 
+    .x-control-wrapper{
+        flex-wrap: wrap;
+        width: 100%;
+      }
 
     .xstyle-linkslist-wrapper .x-grid-control .k-grid-content td a{
 
