--- a/copy/Tass/FillAndSignV2Page/_FillAndSignV2Page.scss
+++ b/copy/Tass/FillAndSignV2Page/_FillAndSignV2Page.scss
@@ -2,7 +2,10 @@
 
 
 #TafnitCore_System_UI_App_Tools_FillAndSignV2Page{
-
+    .x-control-wrapper{
+        flex-wrap: wrap;
+        width: 100%;
+      }
     // title //
 
     .k-header.x-section-header-wrapper{
