--- a/copy/Tass/Surevy/_Survey.scss
+++ b/copy/Tass/Surevy/_Survey.scss
@@ -5,7 +5,10 @@
 }
 
 #TafnitCore_SaaSServer_Survey_UI_Survey {
-
+    .x-control-wrapper{
+        flex-wrap: wrap;
+        width: 100%;
+      }
    & div[uxid=SurveyLogo] img{
     width: 270px !important; 
     top: 50% !important;
