--- a/copy/portal/Agent/components/_firstPanel.scss
+++ b/copy/portal/Agent/components/_firstPanel.scss
@@ -1,4 +1,20 @@
-
+.x-section-header-wrapper{
+       
+    & .col{
+        padding-right: 0;
+    }
+    background: no-repeat;
+    margin-bottom: 10px;
+    .x-section-header {
+        font-family: 'Heebo';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 24px;
+        line-height: 120%;
+        text-align: right;
+        color: $first-panel-color-title;
+    }
+}
 .greyPanel{
 
     display: grid;
@@ -30,6 +46,56 @@
 
 .greyPanel:has(.first-panel){
   display: block;
+
+  .gridHeaderButton{
+    display: grid;
+    grid-template-columns: 1fr auto;
+    gap: 15px;
+
+    & >div{
+        align-self: center;
+        top: 15px;
+        position: relative;
+        &.xstyle-kicon-wrapper{
+            background: $first-panel-bg-icon-button;
+            width: 40px;
+            height: 40px;
+            border:1px solid $first-panel-border-icon-button;
+            border-radius: 10px;
+            align-items: center;
+            
+            &:hover{
+                background: $button-bg-hover;
+                border: 1px solid $special-button-color-border-hover;
+                color: white !important;
+                span::before{
+                  color:  white !important;
+                }
+                span::after{
+                    color:  white !important;
+                  }
+              }
+        
+              &:focus:before{
+                background: $button-color-bg-focus;
+                color: white !important;
+                opacity: 1;
+                span{
+                  color:  white !important;
+                }
+              }
+            & .k-icon{
+               font-size: 32px;
+            }
+            .x-kicon-caption{
+                display: none;
+            }
+        }
+
+
+  
+    }
+}
 .x-section-header-wrapper{
     & .col{
         padding-right: 0;
@@ -63,10 +129,10 @@
             align-self: center;
             top: 15px;
             position: relative;
-            .xstyle-kicon-wrapper{
+            &.xstyle-kicon-wrapper{
                 background: $first-panel-bg-icon-button;
-                width: 50px;
-                height: 50px;
+                width: 40px;
+                height: 40px;
                 border:1px solid $first-panel-border-icon-button;
                 border-radius: 10px;
                 align-items: center;
@@ -105,7 +171,61 @@
     }
 }
 }
+.first-panel{
 
+    & .col{
+        padding: 0;
+    }
+    .gridHeaderButton{
+        display: grid;
+        grid-template-columns: 1fr auto;
+        gap: 15px;
+
+        & >div{
+            align-self: center;
+            top: 15px;
+            position: relative;
+            &.xstyle-kicon-wrapper{
+                background: $first-panel-bg-icon-button;
+                width: 40px;
+                height: 40px;
+                border:1px solid $first-panel-border-icon-button;
+                border-radius: 10px;
+                align-items: center;
+                
+                &:hover{
+                    background: $button-bg-hover;
+                    border: 1px solid $special-button-color-border-hover;
+                    color: white !important;
+                    span::before{
+                      color:  white !important;
+                    }
+                    span::after{
+                        color:  white !important;
+                      }
+                  }
+            
+                  &:focus:before{
+                    background: $button-color-bg-focus;
+                    color: white !important;
+                    opacity: 1;
+                    span{
+                      color:  white !important;
+                    }
+                  }
+                & .k-icon{
+                   font-size: 32px;
+                }
+                .x-kicon-caption{
+                    display: none;
+                }
+            }
+
+
+      
+        }
+    }
+}
 
 #TafnitCore_SaaSServer_Portal_Default_UI_OrdersAwaitingSupplier,
 #TafnitCore_SaaSServer_Portal_Default_UI_OrdersAwaitingExecution,
