--- a/copy/portal/Agent/components/_payment-cube.scss
+++ b/copy/portal/Agent/components/_payment-cube.scss
@@ -48,7 +48,7 @@
             align-self: center;
             top: 15px;
             position: relative;
-            .xstyle-kicon-wrapper{
+            &.xstyle-kicon-wrapper{
                 background: $first-panel-bg-icon-button;
                 width: 50px;
                 height: 50px;
