--- a/copy/portal/Agent/components/_row.scss
+++ b/copy/portal/Agent/components/_row.scss
@@ -31,6 +31,7 @@ margin-top: 0px !important;
         border-radius: 0;
         padding: 0;
         margin-bottom: 0;
+        background: none;
         & .col, .col-12{
             padding: 0;
         }
