--- a/copy/portal/PortalCustomer/components/_payment-cube.scss
+++ b/copy/portal/PortalCustomer/components/_payment-cube.scss
@@ -48,10 +48,11 @@
             align-self: center;
             top: 15px;
             position: relative;
-            .xstyle-kicon-wrapper{
+            margin-left: 0 !important;
+            &.xstyle-kicon-wrapper{
                 background: $first-panel-bg-icon-button;
-                width: 50px;
-                height: 50px;
+                width: 40px;
+                height: 40px;
                 border:1px solid  $first-panel-border-icon-button;
                 border-radius: 10px;
                 align-items: center;
@@ -87,7 +88,7 @@
             }
 
 
-            .xstyle-buttoncontrol-wrapper{
+            &.xstyle-buttoncontrol-wrapper{
                  .x-button-wrapper {
                     float: left;
                  }
