--- a/copy/portal/PortalSuppliers/components/_cubeDashboard.scss
+++ b/copy/portal/PortalSuppliers/components/_cubeDashboard.scss
@@ -26,7 +26,7 @@
         grid-template-columns: auto 1fr;
         gap: 5px;
 
-        .x-self-container {
+        .x-control-wrapper {
             top: 50%;
             transform: translateY(-50%);
             position: relative;
