--- a/copy/portal/PortalSuppliers/components/_firstPanel.scss
+++ b/copy/portal/PortalSuppliers/components/_firstPanel.scss
@@ -37,7 +37,8 @@
             align-self: center;
             top: 15px;
             position: relative;
-            .xstyle-kicon-wrapper{
+            margin-left: 0 !important;
+            &.xstyle-kicon-wrapper{
                 background: $first-panel-bg-icon-button;
                 width: 50px;
                 height: 50px;
