--- a/site/Pery/Tass/style.scss
+++ b/site/Pery/Tass/style.scss
@@ -1,3 +1,6 @@
-@use '../Tass/ErrorMessage/ErrorMessage';
-@use '../Tass/FillAndSignV2Page/FillAndSignV2Page';
-@use '../Tass/Surevy/Survey';
+@import '../Tass/ErrorMessage/ErrorMessage';
+@import '../Tass/FillAndSignV2Page/FillAndSignV2Page';
+@import '../Tass/Surevy/Survey';
+@import '../Tass/payment/payment';
+
+@import '../../../copy/Tass/style.scss';
