--- a/site/Phoenix/Tass/bin/style.css
+++ b/site/Phoenix/Tass/bin/style.css
@@ -223,6 +223,10 @@ body {
   font-size: 24 !important;
 }
 
+#TafnitCore_System_UI_App_Tools_FillAndSignV2Page .x-control-wrapper {
+  flex-wrap: wrap;
+  width: 100%;
+}
 #TafnitCore_System_UI_App_Tools_FillAndSignV2Page .k-header.x-section-header-wrapper {
   border-bottom: #14008e !important;
 }
@@ -352,6 +356,10 @@ body {
   color: #0c0e1f;
 }
 
+#TafnitCore_SaaSServer_Survey_UI_Survey .x-control-wrapper {
+  flex-wrap: wrap;
+  width: 100%;
+}
 #TafnitCore_SaaSServer_Survey_UI_Survey div[uxid=SurveyLogo] img {
   width: 270px !important;
   top: 50% !important;
@@ -522,6 +530,10 @@ body {
 }
 #TafnitCore_SaaSServer_PaymentGetway_UI_SelectPayment .titlePaymentOption {
   color: #000000 !important;
+}
+#TafnitCore_SaaSServer_PaymentGetway_UI_SelectPayment .x-control-wrapper {
+  flex-wrap: wrap;
+  width: 100%;
 }
 
 @media only screen and (min-width: 1165px) {
